Tema 2/ECO GRID/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> programa
Rule 1     programa -> lista_sentencias
Rule 2     lista_sentencias -> sentencia
Rule 3     lista_sentencias -> lista_sentencias sentencia
Rule 4     sentencia -> comando NUEVA_LINEA
Rule 5     sentencia -> asignacion NUEVA_LINEA
Rule 6     sentencia -> declaracion_si
Rule 7     sentencia -> declaracion_mientras
Rule 8     sentencia -> declaracion_repetir
Rule 9     sentencia -> NUEVA_LINEA
Rule 10    comando -> INIT_GRID
Rule 11    comando -> CONMUTAR PAREN_IZQ ID COMA expresion PAREN_DER
Rule 12    comando -> REFRIGERACION PAREN_IZQ ID COMA expresion PAREN_DER
Rule 13    comando -> ALERTA
Rule 14    comando -> ESPERAR PAREN_IZQ expresion PAREN_DER
Rule 15    asignacion -> ID ASIGNACION expresion
Rule 16    declaracion_si -> SI expresion ENTONCES NUEVA_LINEA lista_sentencias FIN_SI
Rule 17    declaracion_si -> SI expresion ENTONCES NUEVA_LINEA lista_sentencias SINO NUEVA_LINEA lista_sentencias FIN_SI
Rule 18    declaracion_mientras -> MIENTRAS expresion EJECUTAR NUEVA_LINEA lista_sentencias FIN_MIENTRAS
Rule 19    declaracion_repetir -> REPETIR expresion VECES NUEVA_LINEA lista_sentencias FIN_REPETIR
Rule 20    expresion -> expresion_logica
Rule 21    expresion_logica -> expresion_relacional
Rule 22    expresion_logica -> expresion_logica Y expresion_relacional
Rule 23    expresion_logica -> expresion_logica O expresion_relacional
Rule 24    expresion_relacional -> expresion_aritmetica
Rule 25    expresion_relacional -> expresion_aritmetica IGUAL expresion_aritmetica
Rule 26    expresion_relacional -> expresion_aritmetica DISTINTO expresion_aritmetica
Rule 27    expresion_relacional -> expresion_aritmetica MENOR expresion_aritmetica
Rule 28    expresion_relacional -> expresion_aritmetica MAYOR expresion_aritmetica
Rule 29    expresion_relacional -> expresion_aritmetica MENOR_IGUAL expresion_aritmetica
Rule 30    expresion_relacional -> expresion_aritmetica MAYOR_IGUAL expresion_aritmetica
Rule 31    expresion_aritmetica -> termino
Rule 32    expresion_aritmetica -> expresion_aritmetica MAS termino
Rule 33    expresion_aritmetica -> expresion_aritmetica MENOS termino
Rule 34    termino -> factor
Rule 35    termino -> termino POR factor
Rule 36    termino -> termino ENTRE factor
Rule 37    factor -> ENTERO
Rule 38    factor -> FLOTANTE
Rule 39    factor -> VERDADERO
Rule 40    factor -> FALSO
Rule 41    factor -> ID
Rule 42    factor -> LEER_TEMP PAREN_IZQ ID PAREN_DER
Rule 43    factor -> ESTADO_CARGA PAREN_IZQ ID PAREN_DER
Rule 44    factor -> LEER_GEN PAREN_IZQ ID PAREN_DER
Rule 45    factor -> LEER_DEM PAREN_IZQ ID PAREN_DER
Rule 46    factor -> PAREN_IZQ expresion PAREN_DER
Rule 47    factor -> NO factor

Terminals, with rules where they appear

ALERTA               : 13
ASIGNACION           : 15
COMA                 : 11 12
CONMUTAR             : 11
DISTINTO             : 26
EJECUTAR             : 18
ENTERO               : 37
ENTONCES             : 16 17
ENTRE                : 36
ESPERAR              : 14
ESTADO_CARGA         : 43
FALSO                : 40
FIN_MIENTRAS         : 18
FIN_REPETIR          : 19
FIN_SI               : 16 17
FLOTANTE             : 38
ID                   : 11 12 15 41 42 43 44 45
IGUAL                : 25
INIT_GRID            : 10
LEER_DEM             : 45
LEER_GEN             : 44
LEER_TEMP            : 42
MAS                  : 32
MAYOR                : 28
MAYOR_IGUAL          : 30
MENOR                : 27
MENOR_IGUAL          : 29
MENOS                : 33
MIENTRAS             : 18
NO                   : 47
NUEVA_LINEA          : 4 5 9 16 17 17 18 19
O                    : 23
PAREN_DER            : 11 12 14 42 43 44 45 46
PAREN_IZQ            : 11 12 14 42 43 44 45 46
POR                  : 35
REFRIGERACION        : 12
REPETIR              : 19
SI                   : 16 17
SINO                 : 17
VECES                : 19
VERDADERO            : 39
Y                    : 22
error                : 

Nonterminals, with rules where they appear

asignacion           : 5
comando              : 4
declaracion_mientras : 7
declaracion_repetir  : 8
declaracion_si       : 6
expresion            : 11 12 14 15 16 17 18 19 46
expresion_aritmetica : 24 25 25 26 26 27 27 28 28 29 29 30 30 32 33
expresion_logica     : 20 22 23
expresion_relacional : 21 22 23
factor               : 34 35 36 47
lista_sentencias     : 1 3 16 17 17 18 19
programa             : 0
sentencia            : 2 3
termino              : 31 32 33 35 36

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . lista_sentencias
    (2) lista_sentencias -> . sentencia
    (3) lista_sentencias -> . lista_sentencias sentencia
    (4) sentencia -> . comando NUEVA_LINEA
    (5) sentencia -> . asignacion NUEVA_LINEA
    (6) sentencia -> . declaracion_si
    (7) sentencia -> . declaracion_mientras
    (8) sentencia -> . declaracion_repetir
    (9) sentencia -> . NUEVA_LINEA
    (10) comando -> . INIT_GRID
    (11) comando -> . CONMUTAR PAREN_IZQ ID COMA expresion PAREN_DER
    (12) comando -> . REFRIGERACION PAREN_IZQ ID COMA expresion PAREN_DER
    (13) comando -> . ALERTA
    (14) comando -> . ESPERAR PAREN_IZQ expresion PAREN_DER
    (15) asignacion -> . ID ASIGNACION expresion
    (16) declaracion_si -> . SI expresion ENTONCES NUEVA_LINEA lista_sentencias FIN_SI
    (17) declaracion_si -> . SI expresion ENTONCES NUEVA_LINEA lista_sentencias SINO NUEVA_LINEA lista_sentencias FIN_SI
    (18) declaracion_mientras -> . MIENTRAS expresion EJECUTAR NUEVA_LINEA lista_sentencias FIN_MIENTRAS
    (19) declaracion_repetir -> . REPETIR expresion VECES NUEVA_LINEA lista_sentencias FIN_REPETIR

    NUEVA_LINEA     shift and go to state 5
    INIT_GRID       shift and go to state 10
    CONMUTAR        shift and go to state 11
    REFRIGERACION   shift and go to state 13
    ALERTA          shift and go to state 14
    ESPERAR         shift and go to state 15
    ID              shift and go to state 12
    SI              shift and go to state 16
    MIENTRAS        shift and go to state 17
    REPETIR         shift and go to state 18

    programa                       shift and go to state 1
    lista_sentencias               shift and go to state 2
    sentencia                      shift and go to state 3
    comando                        shift and go to state 4
    asignacion                     shift and go to state 6
    declaracion_si                 shift and go to state 7
    declaracion_mientras           shift and go to state 8
    declaracion_repetir            shift and go to state 9

state 1

    (0) S' -> programa .



state 2

    (1) programa -> lista_sentencias .
    (3) lista_sentencias -> lista_sentencias . sentencia
    (4) sentencia -> . comando NUEVA_LINEA
    (5) sentencia -> . asignacion NUEVA_LINEA
    (6) sentencia -> . declaracion_si
    (7) sentencia -> . declaracion_mientras
    (8) sentencia -> . declaracion_repetir
    (9) sentencia -> . NUEVA_LINEA
    (10) comando -> . INIT_GRID
    (11) comando -> . CONMUTAR PAREN_IZQ ID COMA expresion PAREN_DER
    (12) comando -> . REFRIGERACION PAREN_IZQ ID COMA expresion PAREN_DER
    (13) comando -> . ALERTA
    (14) comando -> . ESPERAR PAREN_IZQ expresion PAREN_DER
    (15) asignacion -> . ID ASIGNACION expresion
    (16) declaracion_si -> . SI expresion ENTONCES NUEVA_LINEA lista_sentencias FIN_SI
    (17) declaracion_si -> . SI expresion ENTONCES NUEVA_LINEA lista_sentencias SINO NUEVA_LINEA lista_sentencias FIN_SI
    (18) declaracion_mientras -> . MIENTRAS expresion EJECUTAR NUEVA_LINEA lista_sentencias FIN_MIENTRAS
    (19) declaracion_repetir -> . REPETIR expresion VECES NUEVA_LINEA lista_sentencias FIN_REPETIR

    $end            reduce using rule 1 (programa -> lista_sentencias .)
    NUEVA_LINEA     shift and go to state 5
    INIT_GRID       shift and go to state 10
    CONMUTAR        shift and go to state 11
    REFRIGERACION   shift and go to state 13
    ALERTA          shift and go to state 14
    ESPERAR         shift and go to state 15
    ID              shift and go to state 12
    SI              shift and go to state 16
    MIENTRAS        shift and go to state 17
    REPETIR         shift and go to state 18

    sentencia                      shift and go to state 19
    comando                        shift and go to state 4
    asignacion                     shift and go to state 6
    declaracion_si                 shift and go to state 7
    declaracion_mientras           shift and go to state 8
    declaracion_repetir            shift and go to state 9

state 3

    (2) lista_sentencias -> sentencia .

    NUEVA_LINEA     reduce using rule 2 (lista_sentencias -> sentencia .)
    INIT_GRID       reduce using rule 2 (lista_sentencias -> sentencia .)
    CONMUTAR        reduce using rule 2 (lista_sentencias -> sentencia .)
    REFRIGERACION   reduce using rule 2 (lista_sentencias -> sentencia .)
    ALERTA          reduce using rule 2 (lista_sentencias -> sentencia .)
    ESPERAR         reduce using rule 2 (lista_sentencias -> sentencia .)
    ID              reduce using rule 2 (lista_sentencias -> sentencia .)
    SI              reduce using rule 2 (lista_sentencias -> sentencia .)
    MIENTRAS        reduce using rule 2 (lista_sentencias -> sentencia .)
    REPETIR         reduce using rule 2 (lista_sentencias -> sentencia .)
    $end            reduce using rule 2 (lista_sentencias -> sentencia .)
    FIN_SI          reduce using rule 2 (lista_sentencias -> sentencia .)
    SINO            reduce using rule 2 (lista_sentencias -> sentencia .)
    FIN_MIENTRAS    reduce using rule 2 (lista_sentencias -> sentencia .)
    FIN_REPETIR     reduce using rule 2 (lista_sentencias -> sentencia .)


state 4

    (4) sentencia -> comando . NUEVA_LINEA

    NUEVA_LINEA     shift and go to state 20


state 5

    (9) sentencia -> NUEVA_LINEA .

    NUEVA_LINEA     reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    INIT_GRID       reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    CONMUTAR        reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    REFRIGERACION   reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    ALERTA          reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    ESPERAR         reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    ID              reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    SI              reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    MIENTRAS        reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    REPETIR         reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    $end            reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    FIN_SI          reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    SINO            reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    FIN_MIENTRAS    reduce using rule 9 (sentencia -> NUEVA_LINEA .)
    FIN_REPETIR     reduce using rule 9 (sentencia -> NUEVA_LINEA .)


state 6

    (5) sentencia -> asignacion . NUEVA_LINEA

    NUEVA_LINEA     shift and go to state 21


state 7

    (6) sentencia -> declaracion_si .

    NUEVA_LINEA     reduce using rule 6 (sentencia -> declaracion_si .)
    INIT_GRID       reduce using rule 6 (sentencia -> declaracion_si .)
    CONMUTAR        reduce using rule 6 (sentencia -> declaracion_si .)
    REFRIGERACION   reduce using rule 6 (sentencia -> declaracion_si .)
    ALERTA          reduce using rule 6 (sentencia -> declaracion_si .)
    ESPERAR         reduce using rule 6 (sentencia -> declaracion_si .)
    ID              reduce using rule 6 (sentencia -> declaracion_si .)
    SI              reduce using rule 6 (sentencia -> declaracion_si .)
    MIENTRAS        reduce using rule 6 (sentencia -> declaracion_si .)
    REPETIR         reduce using rule 6 (sentencia -> declaracion_si .)
    $end            reduce using rule 6 (sentencia -> declaracion_si .)
    FIN_SI          reduce using rule 6 (sentencia -> declaracion_si .)
    SINO            reduce using rule 6 (sentencia -> declaracion_si .)
    FIN_MIENTRAS    reduce using rule 6 (sentencia -> declaracion_si .)
    FIN_REPETIR     reduce using rule 6 (sentencia -> declaracion_si .)


state 8

    (7) sentencia -> declaracion_mientras .

    NUEVA_LINEA     reduce using rule 7 (sentencia -> declaracion_mientras .)
    INIT_GRID       reduce using rule 7 (sentencia -> declaracion_mientras .)
    CONMUTAR        reduce using rule 7 (sentencia -> declaracion_mientras .)
    REFRIGERACION   reduce using rule 7 (sentencia -> declaracion_mientras .)
    ALERTA          reduce using rule 7 (sentencia -> declaracion_mientras .)
    ESPERAR         reduce using rule 7 (sentencia -> declaracion_mientras .)
    ID              reduce using rule 7 (sentencia -> declaracion_mientras .)
    SI              reduce using rule 7 (sentencia -> declaracion_mientras .)
    MIENTRAS        reduce using rule 7 (sentencia -> declaracion_mientras .)
    REPETIR         reduce using rule 7 (sentencia -> declaracion_mientras .)
    $end            reduce using rule 7 (sentencia -> declaracion_mientras .)
    FIN_SI          reduce using rule 7 (sentencia -> declaracion_mientras .)
    SINO            reduce using rule 7 (sentencia -> declaracion_mientras .)
    FIN_MIENTRAS    reduce using rule 7 (sentencia -> declaracion_mientras .)
    FIN_REPETIR     reduce using rule 7 (sentencia -> declaracion_mientras .)


state 9

    (8) sentencia -> declaracion_repetir .

    NUEVA_LINEA     reduce using rule 8 (sentencia -> declaracion_repetir .)
    INIT_GRID       reduce using rule 8 (sentencia -> declaracion_repetir .)
    CONMUTAR        reduce using rule 8 (sentencia -> declaracion_repetir .)
    REFRIGERACION   reduce using rule 8 (sentencia -> declaracion_repetir .)
    ALERTA          reduce using rule 8 (sentencia -> declaracion_repetir .)
    ESPERAR         reduce using rule 8 (sentencia -> declaracion_repetir .)
    ID              reduce using rule 8 (sentencia -> declaracion_repetir .)
    SI              reduce using rule 8 (sentencia -> declaracion_repetir .)
    MIENTRAS        reduce using rule 8 (sentencia -> declaracion_repetir .)
    REPETIR         reduce using rule 8 (sentencia -> declaracion_repetir .)
    $end            reduce using rule 8 (sentencia -> declaracion_repetir .)
    FIN_SI          reduce using rule 8 (sentencia -> declaracion_repetir .)
    SINO            reduce using rule 8 (sentencia -> declaracion_repetir .)
    FIN_MIENTRAS    reduce using rule 8 (sentencia -> declaracion_repetir .)
    FIN_REPETIR     reduce using rule 8 (sentencia -> declaracion_repetir .)


state 10

    (10) comando -> INIT_GRID .

    NUEVA_LINEA     reduce using rule 10 (comando -> INIT_GRID .)


state 11

    (11) comando -> CONMUTAR . PAREN_IZQ ID COMA expresion PAREN_DER

    PAREN_IZQ       shift and go to state 22


state 12

    (15) asignacion -> ID . ASIGNACION expresion

    ASIGNACION      shift and go to state 23


state 13

    (12) comando -> REFRIGERACION . PAREN_IZQ ID COMA expresion PAREN_DER

    PAREN_IZQ       shift and go to state 24


state 14

    (13) comando -> ALERTA .

    NUEVA_LINEA     reduce using rule 13 (comando -> ALERTA .)


state 15

    (14) comando -> ESPERAR . PAREN_IZQ expresion PAREN_DER

    PAREN_IZQ       shift and go to state 25


state 16

    (16) declaracion_si -> SI . expresion ENTONCES NUEVA_LINEA lista_sentencias FIN_SI
    (17) declaracion_si -> SI . expresion ENTONCES NUEVA_LINEA lista_sentencias SINO NUEVA_LINEA lista_sentencias FIN_SI
    (20) expresion -> . expresion_logica
    (21) expresion_logica -> . expresion_relacional
    (22) expresion_logica -> . expresion_logica Y expresion_relacional
    (23) expresion_logica -> . expresion_logica O expresion_relacional
    (24) expresion_relacional -> . expresion_aritmetica
    (25) expresion_relacional -> . expresion_aritmetica IGUAL expresion_aritmetica
    (26) expresion_relacional -> . expresion_aritmetica DISTINTO expresion_aritmetica
    (27) expresion_relacional -> . expresion_aritmetica MENOR expresion_aritmetica
    (28) expresion_relacional -> . expresion_aritmetica MAYOR expresion_aritmetica
    (29) expresion_relacional -> . expresion_aritmetica MENOR_IGUAL expresion_aritmetica
    (30) expresion_relacional -> . expresion_aritmetica MAYOR_IGUAL expresion_aritmetica
    (31) expresion_aritmetica -> . termino
    (32) expresion_aritmetica -> . expresion_aritmetica MAS termino
    (33) expresion_aritmetica -> . expresion_aritmetica MENOS termino
    (34) termino -> . factor
    (35) termino -> . termino POR factor
    (36) termino -> . termino ENTRE factor
    (37) factor -> . ENTERO
    (38) factor -> . FLOTANTE
    (39) factor -> . VERDADERO
    (40) factor -> . FALSO
    (41) factor -> . ID
    (42) factor -> . LEER_TEMP PAREN_IZQ ID PAREN_DER
    (43) factor -> . ESTADO_CARGA PAREN_IZQ ID PAREN_DER
    (44) factor -> . LEER_GEN PAREN_IZQ ID PAREN_DER
    (45) factor -> . LEER_DEM PAREN_IZQ ID PAREN_DER
    (46) factor -> . PAREN_IZQ expresion PAREN_DER
    (47) factor -> . NO factor

    ENTERO          shift and go to state 32
    FLOTANTE        shift and go to state 33
    VERDADERO       shift and go to state 34
    FALSO           shift and go to state 35
    ID              shift and go to state 36
    LEER_TEMP       shift and go to state 37
    ESTADO_CARGA    shift and go to state 39
    LEER_GEN        shift and go to state 40
    LEER_DEM        shift and go to state 41
    PAREN_IZQ       shift and go to state 38
    NO              shift and go to state 42

    expresion                      shift and go to state 26
    expresion_logica               shift and go to state 27
    expresion_relacional           shift and go to state 28
    expresion_aritmetica           shift and go to state 29
    termino                        shift and go to state 30
    factor                         shift and go to state 31

state 17
